<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skd100_gz</name>
  <version>1.0.0</version>
  <description>SKD-100 launch files and configurations for simulation using Gazebo.</description>
  <license>Apache-2.0</license>

  <author email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</author>
  <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>

  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>skd100_description</exec_depend>

  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>

  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
