<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skd100_nav2_sim</name>
  <version>1.0.0</version>
  <description>Nav2 launch files and configurations for SKD-100 simulation.</description>
  <license>Apache-2.0</license>

  <author email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</author>
  <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>

  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>skd100_gz</exec_depend>
  <exec_depend>skd100_teleop</exec_depend>
  <exec_depend>skd100_localization</exec_depend>
  <exec_depend>skd100_navigation</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
